--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EthanOS Mobile V3</title>
-    <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.6.12/lunar.js"></script>
+    <title>EthanOS Safe Mode</title>
     <style>
         /* 全局設定 */
         body {
@@ -17,7 +16,7 @@
             justify-content: center;
             align-items: center;
             background-color: #1a1a1a;
-            /* 背景圖：你可以換成自己喜歡的網址 */
+            /* 背景圖 */
             background-image: url('https://images.unsplash.com/photo-1493246507139-91e8fad9978e?q=80&w=2940&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
@@ -31,7 +30,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4); /* 背景暗度 */
+            background: rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(5px);
             z-index: 0;
         }
@@ -45,7 +44,7 @@
             padding: 20px 0;
         }
 
-        /* 時鐘與日期模組 */
+        /* 時鐘 */
         .clock-box {
             margin-bottom: 30px;
             text-shadow: 0 4px 20px rgba(0,0,0,0.6);
@@ -56,11 +55,10 @@
             line-height: 1;
         }
         .date {
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             font-weight: 300;
             opacity: 0.9;
             margin-top: 10px;
-            line-height: 1.5; /* 讓兩行字不要黏太緊 */
         }
 
         /* 搜尋框 */
@@ -82,18 +80,16 @@
             color: white;
             border: 1px solid rgba(255, 255, 255, 0.2);
             text-align: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
         .search-input::placeholder { color: rgba(255, 255, 255, 0.7); }
 
-        /* 傳送門 */
+        /* 按鈕 */
         .links-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 15px;
             width: 100%;
         }
-
         .link-card {
             display: flex;
             flex-direction: column;
@@ -108,17 +104,12 @@
             transition: transform 0.2s;
         }
         .link-card:active { transform: scale(0.95); }
-
         .link-icon { font-size: 2rem; margin-bottom: 5px; }
         .link-name { font-size: 0.9rem; }
 
-        /* 手機版適配 */
         @media (max-width: 600px) {
             .time { font-size: 4rem; }
-            .links-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 10px;
-            }
+            .links-grid { grid-template-columns: repeat(3, 1fr); gap: 10px; }
             .link-card { height: 90px; }
         }
     </style>
@@ -130,7 +121,7 @@
     <div class="container">
         <div class="clock-box">
             <div class="time" id="time">00:00</div>
-            <div class="date" id="date">Loading...</div>
+            <div class="date" id="date">載入中...</div>
         </div>
 
         <div class="search-box">
@@ -154,4 +145,44 @@
             </a>
             <a href="https://gemini.google.com" class="link-card">
                 <span class="link-icon">✨</span>
-                <span class="link-
+                <span class="link-name">Gemini</span>
+            </a>
+            <a href="https://chat.openai.com" class="link-card">
+                <span class="link-icon">🤖</span>
+                <span class="link-name">ChatGPT</span>
+            </a>
+            <a href="https://www.youtube.com" class="link-card">
+                <span class="link-icon">📺</span>
+                <span class="link-name">YouTube</span>
+            </a>
+        </div>
+    </div>
+
+    <script>
+        // 安全版邏輯：不使用任何外部 JS，保證不當機
+        function updateTime() {
+            const now = new Date();
+            
+            // 1. 時間
+            const hours = String(now.getHours()).padStart(2, '0');
+            const minutes = String(now.getMinutes()).padStart(2, '0');
+            document.getElementById('time').innerText = `${hours}:${minutes}`;
+            
+            // 2. 日期 (民國 + 西元)
+            const year = now.getFullYear();
+            const rocYear = year - 1911; // 民國年
+            const month = now.getMonth() + 1;
+            const day = now.getDate();
+            const weekDays = ['週日', '週一', '週二', '週三', '週四', '週五', '週六'];
+            const weekDay = weekDays[now.getDay()];
+
+            // 3. 組合顯示
+            const dateString = `民國${rocYear}年 ${month}月${day}日 ${weekDay}`;
+            document.getElementById('date').innerText = dateString;
+        }
+
+        setInterval(updateTime, 1000);
+        updateTime();
+    </script>
+</body>
+</html>
